feat(thesis): daily update

--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -103,6 +103,13 @@
   note = {Accessed on: 2024.01.08.}}
 }
 
+@online{APPLICATIONDIAGRAMSFORDANTESYSTEMS,
+  author = {Audinate},
+  title = {Application Diagrams for Dante Systems},
+  url = {https://my.audinate.com/sites/default/files/Live_Performance_Touring_Venue_Audio_System_Diagrams_Dante.pdf},
+  note = {Accessed on: 2024.02.25.}
+}
+
 ----------------------------------------------------------------------------
 https://broadmax.hu/wp-content/uploads/2016/10/three-pillars-audio-networking-whitepaper-audinate.pdf
 https://broadmax.hu/wp-content/uploads/2016/10/rise-of-audio-networking-audinate-wp.pdf
