--- a/thesis.tex
+++ b/thesis.tex
@@ -97,7 +97,7 @@ tervezése, építése, optimalizálása, beüzemelése} % Cím
 
 % Táblázatok listája - opcionális
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-%\listoftables\addcontentsline{toc}{chapter}{\listtablename}
+\listoftables\addcontentsline{toc}{chapter}{\listtablename}
 
 
 % Irodalomjegyzék
