--- a/content/system_desing.tex
+++ b/content/system_desing.tex
@@ -29,20 +29,6 @@ az iK42 négy kimeneti csatornával rendelkezik, 20.000 W teljesítmény leadás
 Ezzel szemben az iK81 nyolc kimeneti csatornával rendelkezik, 10.000 W teljesítménnyel. \cite{IKONAMPUSEGUIDE}
 A végfokokat a Dante hálózaton keresztül fogjuk jellel ellátni, így a hagyományos analóg XLR, vagy AES kábelezés helyett
 két CAT5E kábellel (a redundancia miatt) tudjuk a végfokokat a hálózatra kötni. 
-A végfokrendszer fő vezérlő protokollja miatt szükség lesz még egy CAT5E alapú
-összeköttetésre, ami az egyes végfokokat köti össze egy hálózatba a switcheken keresztül. (VU-NET protokoll)
-Minden egyes végfokrackben két MikroTik 24 portos switch lesz. Az egyik switch a Dante elsődleges hálózatát fogja kizárólag kezelni.
-A másik switch a Dante másodlagos hálózatát, és a VU-NET hálózatot fogja kezelni.
-Ez a két alhálózat VLAN szegmensekkel lesz elkülönítve, hogy a hálózat biztonságos és stabil legyen.
-A rendszer kábelezése egyedileg készített Neutrik EtherCon csatlakozóval ellátott CAT5E és CAT6A kábelekből fog állni.
-A kábelek készítésekor a T568B szabvány szerinti kábelrendezést alkalmazom, mivel a T568B jobb átviteli
-teljesítményt és interferencia védelmet nyújt a hosszú távú használat során.
-Nem szükséges a T568A szabvány által nyújtott plusz kompatibilitás a régi hálózatokkal, mivel egy teljesen új 
-modern hálózatot fogunk kiépíteni. 
-A csatlakozók felhelyezésekor a szabványnak megfelelően járok el, milliméterre pontosan, hogy a kábelek
-a lehető legjobb minőségűek legyenek. Ez a CAT6A kábeleknél különösen fontos, mivel a CAT6A kábelek
-még nagyobb frekvencia tartományban képesek adatokat továbbítani, mint a CAT5E kábelek,
-ezért jobban érzékenyek a külső interferenciákra.
 %----------------------------------------------------------------------------
 \begin{figure}[H]
     \centering
@@ -58,10 +44,34 @@ ezért jobban érzékenyek a külső interferenciákra.
     \end{minipage}
 \end{figure}
 %----------------------------------------------------------------------------
+A végfokrendszer fő vezérlő protokollja miatt szükség lesz még egy CAT5E alapú
+összeköttetésre, ami az egyes végfokokat köti össze egy hálózatba a switcheken keresztül. (VU-NET protokoll)
+Minden egyes végfokrackben két MikroTik 24 portos switch lesz. Az egyik switch a Dante elsődleges hálózatát fogja kizárólag kezelni.
+A másik switch a Dante másodlagos hálózatát, és a VU-NET hálózatot fogja kezelni.
+Ez a két alhálózat VLAN szegmensekkel lesz elkülönítve, hogy a hálózat biztonságos és stabil legyen.
+A rendszer kábelezése egyedileg készített Neutrik EtherCon csatlakozóval ellátott CAT5E és CAT6A kábelekből fog állni.
+A kábelek készítésekor a T568B szabvány szerinti kábelrendezést alkalmazom, mivel a T568B jobb átviteli
+teljesítményt és interferencia védelmet nyújt a hosszú távú használat során.
+Nem szükséges a T568A szabvány által nyújtott plusz kompatibilitás a régi hálózatokkal, mivel egy teljesen új 
+modern hálózatot fogunk kiépíteni. 
+A csatlakozók felhelyezésekor a szabványnak megfelelően járok el, milliméterre pontosan, hogy a kábelek
+a lehető legjobb minőségűek legyenek. Ez a CAT6A kábeleknél különösen fontos, mivel a CAT6A kábelek
+még nagyobb frekvencia tartományban képesek adatokat továbbítani, mint a CAT5E kábelek,
+ezért jobban érzékenyek a külső interferenciákra.
 
-!!!ÁBRA HELYE!!! Egy jel útja a régi hibrid rendszerben
-
-!!!ÁBRA HELYE!!! Egy jel útja az új teljesen digitális rendszerben
+%----------------------------------------------------------------------------
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\linewidth, keepaspectratio]{figures/live-analog.jpg}
+	\caption{Hagyományos analóg kábelezés \cite{APPLICATIONDIAGRAMSFORDANTESYSTEMS}}\label{fig:live-analog}
+\end{figure}
+%----------------------------------------------------------------------------
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\linewidth, keepaspectratio]{figures/live-dante.jpg}
+	\caption{Dante digitális kábelezés \cite{APPLICATIONDIAGRAMSFORDANTESYSTEMS}}\label{fig:live-dante}
+\end{figure}
+%----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
 \subsection{Martin Audio Wavefront Precision hangrendszer}
