--- a/content/audio_over_ip_systems.tex
+++ b/content/audio_over_ip_systems.tex
@@ -175,14 +175,14 @@ Szerencsére ez a koncepció elterjedt és jelenleg minden audiohálózati szabv
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\linewidth, keepaspectratio]{figures/link_offset_latency.png}
+	\includegraphics[width=\linewidth, keepaspectratio]{figures/link_offset_latency.jpg}
 	\caption{A kapcsolati eltolás meghatározza a késleltetést \cite{AHNERT2023}}
 	\label {fig:link_offset_latency}
 \end{figure}
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\linewidth, keepaspectratio]{figures/phase_coherence_link_offset.png}
+	\includegraphics[width=\linewidth, keepaspectratio]{figures/phase_coherence_link_offset.jpg}
 	\caption{Fáziskoherencia azonos kapcsolati eltolással \cite{AHNERT2023}}
 	\label {fig:phase_coherence_link_offset}
 \end{figure}
@@ -391,12 +391,12 @@ míg a hosztcím a maradék jobb oldal, ahol az alhálózati maszk `0'-át jelzi
     \centering
     \begin{minipage}{0.45\textwidth}
         \centering
-        \includegraphics[width=67mm, keepaspectratio]{figures/host_a.png}
+        \includegraphics[width=67mm, keepaspectratio]{figures/host_a.jpg}
         \caption{Host A}
     \end{minipage}\hfill
     \begin{minipage}{0.45\textwidth}
         \centering
-        \includegraphics[width=67mm, keepaspectratio]{figures/host_b.png}
+        \includegraphics[width=67mm, keepaspectratio]{figures/host_b.jpg}
         \caption{Host B}
     \end{minipage}
 \end{figure}
@@ -408,7 +408,7 @@ mutat. Ezen két eszköz között egy router nem szükséges.
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=67mm, keepaspectratio]{figures/host_c.png}
+	\includegraphics[width=67mm, keepaspectratio]{figures/host_c.jpg}
 	\caption{Host C}
 	\label {fig:host_c}
 \end{figure}
@@ -461,7 +461,7 @@ TSN/Milan, valamint a CobraNet.
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=67mm, keepaspectratio]{figures/osi_modell.png}
+	\includegraphics[width=67mm, keepaspectratio]{figures/osi_modell.jpg}
 	\caption{Az OSI modell}
 	\label {fig:osi_modell}
 \end{figure}
