--- a/content/system_desing.tex
+++ b/content/system_desing.tex
@@ -118,7 +118,7 @@ a rendelkezésre álló hardver erőforrásokat.
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth, keepaspectratio]{figures/ambrose_email.jpg}
+	\includegraphics[width=\textwidth, keepaspectratio]{figures/ambrose_email.png}
 	\caption{E-mail a Martin Audio vezető szoftvermérnökétől}
 	\label{fig:ambrose_email}
 \end{figure}
@@ -148,7 +148,7 @@ A hozzáadás gombra kattintva a elénk kerül a fő kezelőfelület, ahol a han
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=40mm, keepaspectratio]{figures/display_wpc_0.jpg}
+	\includegraphics[width=40mm, keepaspectratio]{figures/display_wpc_0.png}
 	\caption{Display 2.3.4 b1 kezdőképernyője (WPC)}\label{fig:display_wpc_0}
 \end{figure}
 %----------------------------------------------------------------------------
@@ -159,7 +159,7 @@ balról jobbra haladva. Mivel a különböző részegységek egymásra épülnek
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_0_1.jpg}
+	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_0_1.png}
 	\caption{Display 2.3.4 b1 fő kezelőfelülete (WPC)}\label{fig:display_wpc_0_1}
 \end{figure}
 %----------------------------------------------------------------------------
@@ -180,7 +180,7 @@ tudjuk a területet meghatározni, ahol a hallgatóközönség tartózkodni fog.
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_1.jpg}
+	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_1.png}
 	\caption{Display 2.3.4 b1 \textit{``Slice''} kezelőfelülete (WPC)}\label{fig:display_wpc_1}
 \end{figure}
 %----------------------------------------------------------------------------
@@ -228,7 +228,7 @@ a 14-es érték egyenletes és dinamikus hangvisszaadást biztosít.
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_2.jpg}
+	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_2.png}
 	\caption{Display 2.3.4 b1 \textit{``Cover''} kezelőfelülete (WPC)}\label{fig:display_wpc_2}
 \end{figure}
 %----------------------------------------------------------------------------
@@ -247,7 +247,7 @@ nem szoktam módosítani. A \textit{``Max Time''} mezőben megadott érték más
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_3.jpg}
+	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_3.png}
 	\caption{Display 2.3.4 b1 \textit{``Splay''} kezelőfelülete (WPC)}\label{fig:display_wpc_3}
 \end{figure}
 %----------------------------------------------------------------------------
@@ -266,7 +266,7 @@ Ezek után a rendszert az említett paraméterek alapján össze építjük, fig
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_4.jpg}
+	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_4.png}
 	\caption{Display 2.3.4 b1 \textit{``Rig''} kezelőfelülete (WPC)}\label{fig:display_wpc_4}
 \end{figure}
 %----------------------------------------------------------------------------
@@ -297,7 +297,7 @@ a referencia értéktől való eltérésekről.
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_5.jpg}
+	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_5.png}
 	\caption{Display 2.3.4 b1 \textit{``EQ''} kezelőfelülete (WPC)}\label{fig:display_wpc_5}
 \end{figure}
 %----------------------------------------------------------------------------
@@ -312,7 +312,7 @@ a referencia értéktől való eltérésekről.
 %----------------------------------------------------------------------------
 %\begin{figure}[H]
 %	\centering
-%	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_6.jpg}
+%	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_6.png}
 %	\caption{Display 2.3.4 b1 \textit{``SPL''}kezelőfelülete (WPC)}\label{fig:display_wpc_6}
 %\end{figure}
 %----------------------------------------------------------------------------
@@ -321,7 +321,7 @@ Az exportálás során egy D2P kiterjesztésű fájlt fogunk kapni, amit a VU-NE
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_7.jpg}
+	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpc_7.png}
 	\caption{Display 2.3.4 b1 exportáló kezelőfelülete (WPC)}\label{fig:display_wpc_7}
 \end{figure}
 %----------------------------------------------------------------------------
@@ -348,7 +348,7 @@ amelyek jelentős hangvisszaverődést okoznának.
 %----------------------------------------------------------------------------
 %\begin{figure}[H]
 %	\centering
-%	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpm_1.jpg}
+%	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpm_1.png}
 %	\caption{Display 2.3.4 b1 \textit{``Cover''} kezelőfelülete (WPM)}\label{fig:display_wpm_1}
 %\end{figure}
 %----------------------------------------------------------------------------
@@ -362,7 +362,7 @@ kiegészítő egység.
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpm_2.jpg}
+	\includegraphics[width=\textwidth, keepaspectratio]{figures/display_wpm_2.png}
 	\caption{Display 2.3.4 b1 \textit{``Splay''} kezelőfelülete (WPM)}\label{fig:display_wpm_2}
 \end{figure}
 %----------------------------------------------------------------------------
@@ -515,7 +515,7 @@ valamilyen okból meg kell változtatni, egyszerűen elérhető a szükséges in
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth, keepaspectratio]{figures/dante_ips.jpg}
+	\includegraphics[width=\textwidth, keepaspectratio]{figures/dante_ips.png}
 	\caption{Dante eszközök IP címei a hálózaton}\label{fig:dante_ips}
 \end{figure}
 %----------------------------------------------------------------------------
