feat(thesis): daily update

--- a/include/variables.tex
+++ b/include/variables.tex
@@ -117,6 +117,10 @@
     \en{Operational experience and further development opportunities}%
     \hu{Üzemeltetési tapasztalatok és továbbfejlesztési lehetőségek}%
 }
+\newcommand{\AudioBasics}{%
+    \en{Basics of audio systems}%
+    \hu{Hangtechnikai alapok}%
+}
 
 \newcommand{\szerzo}{%
     \en{\szerzoKeresztnev{} \szerzoVezeteknev}%
