--- a/thesis.tex
+++ b/thesis.tex
@@ -80,6 +80,7 @@ tervezése, építése, optimalizálása, beüzemelése} % Cím
 
 % Saját munka
 \include{content/introduction}
+\include{content/audio_basics}
 \include{content/audio_over_ip_systems}
 \include{content/system_desing}
 \include{content/further_development}
