feat(thesis): daily update

--- a/content/introduction.tex
+++ b/content/introduction.tex
@@ -31,4 +31,6 @@ hogy tervezzek egy olyan rendszert, amely megoldja a jelenlegi hibrid rendszerü
 Az alapvető szempontok közé tartozott, hogy a rendszer legyen könnyen skálázható, és bővíthető, valamint a jelenlegi rendszert minden tekintetben felülmúlja.
 Első lépésben a különböző Audio over IP protokollok közül kellett választanom,
 amely a leginkább megfelel a rendszerünk igényeinek. Ehhez a piacon lévő protokollokat kellett megvizsgálnom, és a legjobb megoldást választani. 
-
+Szakdolgozatomban sok idegen nyelvű szóra nincsen megfelelő és pontos fordítás ami teljes mértékben tükrözné az adott kifejezés jelentését.
+A továbbiakban ebből kifolyólag feltételezve azt, hogy az olvasó tisztában van a szakmai terminológiával angolul fogom említeni a szakmai kifejezéseket.
+Ezek a kifejezések megjelenhetnek írt szövegként és ábrás illusztrációkban is.
