--- a/content/introduction.tex
+++ b/content/introduction.tex
@@ -9,18 +9,18 @@
 Kisgyermek koromtól kezdve érdekelnek a hangtechnikához fűződő eszközök és azok elméleti-gyakorlati működése. Első élményeim egyike közé tartozik az, amikor
 szüleim egy új fajta rádiólejátszót vásároltak otthonra, amelyen már nem csak a rádióadásokat lehetett hallgatni, hanem lejátszhatóak voltak kazetták is.
 A készüléket akkoriban jobban tudtam kezelni gyermekként, mint a szüleim, egyértelmű volt már akkoriban is, a technika és a zene iránti érdeklődésem.
-Ezek után általános iskolában a fizika tanárommal együtt kezdük el a sulirádió működtetését, amelynek a telepítési részében is részt vettem, mivel azelőtt
+Ezek után általános iskolában a fizika tanárommal együtt kezdtük el a sulirádió működtetését, amelynek a telepítési részében is részt vettem, mivel azelőtt
 csak egyszerű csengők voltak felszerelve az épületben. Szükség volt hangsugárzókra, erősítőkre, mikrofonokra, és egyéb kiegészítőkre. A rádió működtetése
 is az én feladatom lett két másik barátommal együtt, az iskolával kapcsolatos híreket és információkat mondtuk be rövid szünetekben, a hosszabb szünetekben pedig zenéket játszottunk.
 Mindeközben zeneiskolába is beiratkoztam, ahol ütőhangszeresként tanultam egészen egyetemi tanulmányaim kezdetéig. A több mint tíz év alatt, sok új ismeretet és tapasztalatot szereztem,
-amit a későbbiekben mint zenész, mint hangosító tudtam hasznosítani. Megismerkedtem a különböző zenei stílusok egyedi hangzásvilágával, ami a későbbiekben a hangosításban is nagy segítségemre volt.
-Középiskolai tanulmányaim alatt kezdtem el komolyabban foglalkozni a hangtechinka világával komolyabb szinten. 
+amit a későbbiekben mint zenész és hangtechnikával aktívan foglalkozó szakember tudtam hasznosítani. Megismerkedtem a különböző zenei stílusok egyedi hangzásvilágával, ami a későbbiekben a hangosításban is nagy segítségemre volt.
+Középiskolai tanulmányaim alatt kezdtem el komolyabban foglalkozni a hangtechnika világával komolyabb szinten. 
 A fizika tanárommal ugyanis korábban nem csak a sulirádiót működtettük, hanem az összes sulibulit és rendezvényt a faluban mi szolgáltuk ki technikailag.
 Ezért mivel már középiskolába jártam, a későbbiekben egy feltörekvő fiatalos és modern gondolkodású magánvállalkozáshoz ajánlott be engem, mivel a fiatal és motivált munkaerőt kerestek. (TéDé Rendezvények)
 Már az első munkalehetőségnél éreztem, hogy ez egy nagyon jó lehetőség számomra, mindenképpen szeretnék ebben a szakmában dolgozni.
 A cég fő profilja a hangrendszerek kiépítése és üzemeltetése volt, de későbbiekben már a fénytechnikával és színpadtechnikával is el kezdtünk foglalkozni. 
 Ettől kezdve kezdtem el aktívan dolgozni a rendezvényiparban a hangrendszerek világában. Az évek során egyre több tapasztalatot
-szereztem. Évente több mint száz rendezvényen tudtam folyamatosan fejlődni, rutint és ismerettséget szerezni a szakmában.
+szereztem. Évente több mint száz rendezvényen tudtam folyamatosan fejlődni, rutint és ismeretséget szerezni a szakmában.
 
 \subsection{Téma választás}
 
