--- a/content/introduction.tex
+++ b/content/introduction.tex
@@ -40,4 +40,5 @@ Ehhez a piacon lévő protokollokat kellett megvizsgálnom, és egy optimális m
 
 Szakdolgozatomban sok idegen nyelvű szóra nincsen megfelelő és pontos fordítás ami teljes mértékben tükrözné az adott kifejezés jelentését.
 A továbbiakban ebből kifolyólag feltételezve azt, hogy az olvasó tisztában van a szakmai terminológiával angolul fogom említeni a szakmai kifejezéseket.
-Ezek a kifejezések megjelenhetnek írt szövegként és ábrás illusztrációkban is. 
+Ezek a kifejezések megjelenhetnek írt szövegként és ábrás illusztrációkban is. Egyes ábrák rendkívüli komplexitásuk végett a szakmai helyesség és precízió érdekében
+külső forrásból származnak, ezeket az ábrákat a forrásukkal együtt fogom megjeleníteni a szakdolgozatban.
